--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
    まずは無料カウンセリングへ </a>
   </div>
   
-  <p class="FirstViewCaption"
-  ※1: ショッパーズアイ「プログラミングスクール10社を対象にしたサイト比較イメージ調査（2020 年 5 月 22 日～25 日）」より全国の22～49歳の男女691名へのインターネット調査><br>
-  ※2: 29歳以下の転職サポート実施ユーザ（2021年7月~10月）<br>
-  ※3: 返金の条件については
+  <p class="FirstViewCaption">
+  "※1: ショッパーズアイ「プログラミングスクール10社を対象にしたサイト比較イメージ調査（2020 年 5 月 22 日～25 日）」より全国の22～49歳の男女691名へのインターネット調査"<br>
+  "※2: 29歳以下の転職サポート実施ユーザ（2021年7月~10月）"<br>
+  "※3: 返金の条件については"
   <a href="/terms">利用規約</a>
-  をご参照ください</p>
+  "をご参照ください"</p>
   </div>
   </section>
   
